--- a/rooms/templates/partials/nav.html
+++ b/rooms/templates/partials/nav.html
@@ -3,9 +3,9 @@
               <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center"> 
                      <a class = "px-5 py-6" href="{% url 'users:switch_hosting' %}">
                             {% if request.session.is_hosting %}
-                                   Stop hosting
+                                   Guest
                             {% else %}
-                                   Start hosting
+                                   Host
                             {% endif %}         
                      </a>
               </li>
